@@ -10,9 +10,9 @@
 	    <li>As part of our promise, we want Kubuntu to work as well for you
 	    as possible. So while it installs, this slideshow will provide a
 	    quick introduction.</li>
-	    <li class="special">Kubuntu is designed to be easy. Feel free to
-	    explore!</li>
 	</ul>
+	    <p class="special">Kubuntu is designed to be easy. Feel free to
+	    explore!</p>
     </div>
 </div>
 
