@@ -7,8 +7,9 @@ ubiquity-slideshow-ubuntu (21) UNRELEASED; urgency=low
     icon, removed icon.exact property.
   * Firefox icon now points to the correct file (LP: #421864).
   * Fixed RTL for Ubuntu slideshow (LP: #549357).
+  * Fixed RTL for Kubuntu slideshow (LP: #537635).
 
- -- Dylan McCall <dylan@dylan-laptop>  Sun, 04 Apr 2010 14:19:40 -0700
+ -- Dylan McCall <dylan@dylan-laptop>  Sun, 04 Apr 2010 14:38:33 -0700
 
 ubiquity-slideshow-ubuntu (20) lucid; urgency=low
 
